--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^1.0.2",
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
@@ -16,18 +17,28 @@
     "chart.js": "^4.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "faker": "5.5.3",
     "next": "13.4.4",
     "postcss": "8.4.24",
-    "faker": "5.5.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "^6.13.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "viem": "^1.1.6",
+    "wagmi": "^1.2.1"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9"
+  },"browser": {
+    "tls": false,
+    "net": false,
+
+    "fs": false,
+    "os": false,
+    "path": false
   }
+
 }
