--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.0.2",
     "@ethersproject/providers": "^5.7.2",
+    "@rainbow-me/rainbowkit": "^1.0.2",
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
@@ -18,6 +18,7 @@
     "chart.js": "^4.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "ethers": "^5.7.2",
     "faker": "5.5.3",
     "next": "13.4.4",
     "postcss": "8.4.24",
@@ -29,17 +30,17 @@
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "viem": "^1.1.6",
-    "wagmi": "^1.2.1"
+    "wagmi": "^1.2.1",
+    "web3": "^4.0.1"
   },
   "devDependencies": {
     "@types/faker": "^6.6.9"
-  },"browser": {
+  },
+  "browser": {
     "tls": false,
     "net": false,
-
     "fs": false,
     "os": false,
     "path": false
   }
-
 }
