--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^1.0.2",
     "@ethersproject/providers": "^5.7.2",
+    "@rainbow-me/rainbowkit": "^1.0.2",
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
@@ -24,6 +25,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.13.0",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
@@ -33,13 +35,12 @@
   },
   "devDependencies": {
     "@types/faker": "^6.6.9"
-  },"browser": {
+  },
+  "browser": {
     "tls": false,
     "net": false,
-
     "fs": false,
     "os": false,
     "path": false
   }
-
 }
