--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "20.2.6",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
+    "antd": "^5.6.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
